<resources>
    <string name="app_name">CalegPlus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="inputUsername">Masukkan Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="belumPunyaAkun">Belum mempunyai akun?</string>
    <string name="inputPassword">Masukkan Password</string>
    <string name="register">REGISTER</string>
    <string name="namaLengkap">Nama Lengkap</string>
    <string name="inputNamaLengkap">Masukkan Nama Lengkap</string>
    <string name="inputCPassword">Ketikkan Ulang Password</string>
    <string name="inputEmail">Masukkan Email</string>
    <string name="role">Registrasi Sebagai</string>
    <string name="sudahPunyaAkun">Sudah Mempunyai Akun?</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="logout">Logout</string>
    <string name="inputRT">RT</string>
    <string name="inputRW">RW</string>
    <string name="username_profile">Username</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address_profile">Address</string>
    <string name="no_hp_profile">No. Hp</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="select_image">Pilih Gambar</string>
    <string name="update">Update Profile</string>
    <string name="areaKerja">Area Kerja</string>
    <string name="inputNik">Masukkan NIK</string>
    <string name="inputKK">Masukkan KK</string>
    <string name="inputAreaKerja">Masukkan Area Kerja</string>
    <string name="inputKTP">Upload Foto KTP</string>
    <string name="inputNoHp">Masukkan Nomor Hp</string>
    <string name="next">Next</string>

    <string-array name="role">
        <item name="caleg">CALEG</item>
        <item name="koordinator desa">KOORDINATOR DESA</item>
        <item name="saksi tps">SAKSI TPS</item>
    </string-array>

    <string-array name="kabupaten">
        <item name="banyumas">Banyumas</item>
        <item name="banjarnegara">Banjarnegara</item>
    </string-array>

    <string-array name="kecamatan">
        <item name="Banyumas">Banyumas</item>
        <item name="Purwokerto">Purwokerto</item>
    </string-array>
</resources>