<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        app:cardCornerRadius="200dp">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:src="@tools:sample/avatars" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:id="@+id/namaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/namaLengkap"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/black" />
                <TextView
                    android:id="@+id/role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/role"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/black" />
                <TextView
                    android:id="@+id/areaKerja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/areaKerja"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEdit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/edit"
                    android:backgroundTint="@color/peach"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewProfile"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:outlineProvider="none"
                    app:cardBackgroundColor="@color/peach"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            style="@style/TextAppearance.MyApp.detail.text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/rubik_medium"
                            android:text="@string/profile" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_person_24"
                                android:padding="10dp"/>

                            <TextView
                                style="@style/TextAppearance.MyApp.detail.text"
                                android:id="@+id/etUserName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/username" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:src="@drawable/ic_baseline_home_work_24"/>

                            <TextView
                                style="@style/TextAppearance.MyApp.detail.text"
                                android:id="@+id/etAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/address_profile" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_phone_android_24"
                                android:padding="10dp" />

                            <TextView
                                style="@style/TextAppearance.MyApp.detail.text"
                                android:id="@+id/etPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/no_hp_profile" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnLogout"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="64dp"
                    android:outlineProvider="none"
                    app:cardBackgroundColor="@color/peach"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.MyApp.detail.text"
                            android:id="@+id/txtLogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/logout" />

                        <ImageView
                            android:id="@+id/imgLogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:backgroundTint="#00000000"
                            app:tint="@color/white" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
        ]
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>